add about dialog and about.html
Signed-off-by: yenchi.lin <yenchilin@cattail-sw.com>

--- a/assets/about.html
+++ b/assets/about.html
@@ -5,13 +5,12 @@
   </head>
 
   <body>
-    <h1>About Nanidroid</h1>
     <p>This software contains various shared library under different licenses.  Please see their license.txt for detailed license information.</p>
 <ul>
-<li><A href="satori_license.txt">Satoriya</a></li>
+<li><A href="satori_license.txt">Satoriya</a> and Satoriya-Posix for libsatoriya.so</li>
+<li><A href="kawari_license.txt">Kawari</A> for libkawari.so</li>
+<li><A href="yaya_readme.txt">YAYA</A> for libyaya.so</li>
 </ul>
-    <pre>
-
-    </pre>
+<p>Sincere thanks to <A HREF="http://ccm.sherry.jp/ninni/">NiseRingo</A>'s author, PHO (<A HREF="https://twitter.com/#!/phonohawk">@phonohawk</A>), for all his advices and help. And to <A HREF="http://d.hatena.ne.jp/minghai/">Minghai</A> for his work on NiseSakura for Android project which inspired the development of Nanidroid.</p>
   </body>
 </html>
