update localized strings
Signed-off-by: yenchi.lin <yenchilin@cattail-sw.com>

--- a/assets/about.html
+++ b/assets/about.html
@@ -12,5 +12,9 @@
 <li><A href="yaya_readme.txt">YAYA</A> for libyaya.so</li>
 </ul>
 <p>Sincere thanks to <A HREF="http://ccm.sherry.jp/ninni/">NiseRingo</A>'s author, PHO (<A HREF="https://twitter.com/#!/phonohawk">@phonohawk</A>), for all his advices and help. And to <A HREF="http://d.hatena.ne.jp/minghai/">Minghai</A> for his work on NiseSakura for Android project which inspired the development of Nanidroid.</p>
+<p><b>Credits</b></p>
+<p>Program: CatTail Software LLC</p>
+<p>Built-in Ghost &amp; Shell: CatG Studio with <a href="http://www.android.com/developers/branding.html">Android Robot</a> reproduced and modified from work created and <a href="http://code.google.com/policies.html">shared by Google</a> and used according to terms described in the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons 3.0 Attribution License</a>.</p>
+<p>Japanese Translation: <a href="mailto:maggie0530@gmail.com">Maggie Chuang</a></p>
   </body>
 </html>
